[package]
name = "tilegame"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy-inspector-egui = "0.33.1"
bevy_egui = "0.36.0"
#leafwing-input-manager = "0.17.1"                     #bevy = "0.16.1"
bevy = { version = "0.16.1", features = ["wayland"] }
bevy_flycam = "0.16.1"
grid = "1.0.0"
iyes_perf_ui = "0.5.0"
bevy_framepace = "0.19.1"
pathfinding = "4.14.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
